nav set to fixed + margins on mobile fixed

--- a/src/components/Display/Display.module.scss
+++ b/src/components/Display/Display.module.scss
@@ -39,7 +39,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 60%;
+        height: 75%;
         background-color: #10759d;
         border-top-left-radius: 30%;
         border-top-right-radius: 30%;
@@ -112,20 +112,20 @@
     
     .ebcMeter {
         overflow: hidden;
-        width: 40%;
-        height: 10px; 
+        width: 20px;
+        height: 20px; 
         position: relative;
         margin: 10px 0 ; 
         background: rgb(228, 213, 213);
-        border-radius: 25px;
-        padding: 6px;
+        border-radius: 100%;
+        padding: 3px;
         box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
 
         span {
             width: 100%;
             display: block;
             height: 100%;
-            border-radius: 20px;
+            border-radius: 100%;
             box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
               inset 0 -2px 6px rgba(0, 0, 0, 0.4);
             position: relative;
@@ -141,13 +141,8 @@
     }
 
     .beerCard {
-        margin: 15px 0 10px 0;
+        margin: 15px 0 10px 15px;
         height: auto;
-        width: 90%;
-        background-color: rgba($color: #d2dde034, $alpha: 0.5);
-        border-bottom: #10759d;
-        box-shadow: 2px -1px 2px 1px rgba(203, 203, 213, 0.789);
-        border-radius: 50px;
         
         display: flex;
         flex-direction: column;
@@ -194,25 +189,15 @@
     }
 
     .beerCard {
+        margin: 15px 0 10px 0;
+
         img{
             height: 150px;
         }
     
         .textArea {
-            h2 {
-                width: 78%;
-                font-size: 13px;
-                margin: 30px 0 10px 0;
-            }
-        
-            h3 {
-                width: 90%;
-                font-size: 10px;
-            }
-        
             p {
                 font-size: 9px;
-                margin: 15px 0 20px 0;
             }
         }
     }
